--- a/calorie_tracker/static/css/output.css
+++ b/calorie_tracker/static/css/output.css
@@ -487,6 +487,9 @@
   .cursor-not-allowed {
     cursor: not-allowed;
   }
+  .resize-none {
+    resize: none;
+  }
   .grid-cols-1 {
     grid-template-columns: repeat(1, minmax(0, 1fr));
   }
