google auth fixup routing

--- a/calorie_tracker/templates/login/login.html
+++ b/calorie_tracker/templates/login/login.html
@@ -29,7 +29,7 @@
                class="ml-2 text-blue-400 hover:underline font-semibold">Sign Up</a>
         </div>
         <div class="mt-8">
-            <a href="{{ url_for('login_google') }}"
+            <a href="{{ url_for('google.login') }}"
                class="w-full flex items-center justify-center gap-2 bg-white text-zinc-800 font-semibold py-2 px-4 rounded shadow hover:bg-zinc-100 transition">
                 <img src="{{ url_for('static', filename='images/google-symbol.png') }}" class="w-5 h-5">
                 Login with Google
