--- a/calorie_tracker/templates/login/signup_step1.html
+++ b/calorie_tracker/templates/login/signup_step1.html
@@ -30,7 +30,7 @@
         <span class="mx-4 text-zinc-400 text-sm whitespace-nowrap">Or</span>
         <hr class="flex-grow border-zinc-700">
       </div>
-      <a href="{{ url_for('login_google') }}"
+      <a href="{{ url_for('google.login') }}"
          class="w-full flex items-center justify-center gap-2 bg-white text-zinc-800 font-semibold py-2 px-4 rounded shadow hover:bg-zinc-100 transition">
         <img src="{{ url_for('static', filename='images/google-symbol.png') }}" class="w-5 h-5" alt="Google">
         Sign up with Google
